# far2l

./: .editorconfig  CMakeLists.txt  CMakePresets.json  readme.txt
include/: base.h  meta.h  types.h
include/base/: ehs.h  process.h  tags.h
include/evs/: events.h
include/helpers/: cmd_line_parser.h  json_parser.h
include/sm/: settings.h
lib/json/: json.h  json.hpp
src/tmaster/: CMakeLists.txt
src/tmaster/include/: config.h  config.h.in  settings.h  tmaster.h
src/tmaster/src/: main.cpp
